--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <h6>Про нас</h6>
-            <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+            <p class="text-justify">Вітаємо в нашому притулку для тварин! Ми дбайливо ставимося до кожної тварини та надаємо їм усю необхідну догляд та любов. У нашому притулку ви знайдете безліч собак, котів та інших домашніх тварин, які чекають на свій новий дім. Усі наші тваринки пройшли повний медичний огляд та отримали необхідні щеплення та лікування. Ми допоможемо вам знайти саме ту тварину, яка стане вашим ідеальним другом на довгі роки. Завітайте до нас сьогодні та знайдіть свою нову домівку!</p>
           </div>
 
           <div class="col-xs-6 col-md-3">
@@ -220,7 +220,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text"> Притулок "Кітпес" у м. Одеса.
+            <p class="copyright-text"> Притулок "Кітпес". Тел.: +380933498738
             </p>
           </div>
         </div>
